adicionado novas funcionalidades
