# saldo-positivo-web/src/app/lancamento-titulo/LancamentoTitulo.ts
@@ -1,0 +1,6 @@
+export class LancamentoTitulo {
+    id: string;
+    nmLancamento: string;
+    valorPlanejado: string;
+    valorEfetivo: string;
+}
